# fusible

./: Cargo.toml  README.md  ci.sh
crates/allocator/: Cargo.toml  lib.rs
crates/app-benchmark/: Cargo.toml
crates/app-benchmark/src/: lib.rs
crates/critical-section/: Cargo.toml  lib.rs
crates/hybrid-app/: Cargo.toml  build.rs
crates/hybrid-app/src/: lib.c  lib.rs
crates/hybrid-app/tests/: host.rs
crates/qemu/: Cargo.toml  build.rs  memory.x  run.sh
crates/qemu/.cargo/: config.toml
crates/qemu/examples/: app_benchmark.rs  hybrid_app.rs
crates/qemu/src/: defmt.rs  lib.rs
src/: app_define.rs  block_pool.rs  byte_pool.rs  callback_dispatch.rs  event_flags.rs  interrupt_control.rs  lib.rs  mutex.rs  panic.rs  pool.rs  queue.rs  semaphore.rs  thread.rs  timer.rs
tests/: block_pool.rs  block_pool_pointer_spans.rs  byte_pool.rs  byte_pool_pointer_spans.rs  compile_fail.rs  contexts_not_send.rs  drop_in_init.rs  hello_world.rs  linux_port_threading.rs  queue_drop_elems.rs  queue_mpmc.rs  thread_drop_entrypoint_on_return.rs  thread_panic.rs  timer.rs  timer_drop_runnable.rs  timer_panic.rs
tests/ui/: block_pool_option_name.rs  block_pool_option_name.stderr  block_pool_outlast_pool.rs  block_pool_outlast_pool.stderr  block_pool_read_storage.rs  block_pool_read_storage.stderr  block_pool_static_pool.rs  block_pool_static_pool.stderr  block_pool_storage_lifetime_too_small.rs  block_pool_storage_lifetime_too_small.stderr  byte_pool_option_name.rs  byte_pool_option_name.stderr  byte_pool_outlast_pool.rs  byte_pool_outlast_pool.stderr  byte_pool_read_storage.rs  byte_pool_read_storage.stderr  byte_pool_static_pool.rs  byte_pool_static_pool.stderr  byte_pool_storage_lifetime_too_small.rs  byte_pool_storage_lifetime_too_small.stderr  event_flags_option_name.rs  event_flags_option_name.stderr  mutex_guard_cannot_send.rs  mutex_guard_cannot_send.stderr  mutex_guard_outlast_mutex.rs  mutex_guard_outlast_mutex.stderr  mutex_option_name.rs  mutex_option_name.stderr  queue_pinned_inline.rs  queue_pinned_inline.stderr  queue_read_slots.rs  queue_read_slots.stderr  queue_slot_lifetime_too_small.rs  queue_slot_lifetime_too_small.stderr  queue_static_queue.rs  queue_static_queue.stderr  semaphore_option_name.rs  semaphore_option_name.stderr  thread_app_define_capture.rs  thread_app_define_capture.stderr  (+16 more)
