# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: Copyright 2024 Ian McIntyre

[package]
name = "fusible-hybrid-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
libthreadx-sys = { workspace = true }
fusible = { workspace = true }

[build-dependencies]
cc = { workspace = true }
